@@ -6,7 +6,7 @@ standards, things that could be improved, and ideas for enhancements.
 
 nuttx/
 
- (10)  Task/Scheduler (sched/)
+ (11)  Task/Scheduler (sched/)
   (1)  Memory Managment (mm/)
   (3)  Signals (sched/, arch/)
   (2)  pthreads (sched/)
@@ -194,6 +194,25 @@ o Task/Scheduler (sched/)
 
   Status:      Open
   Priority:    Low
+
+  Title:       IMPROVED TASK CONTROL BLOCK STRUCTURE
+               All task resources that are shared amongst threads have
+               their own "break-away", reference-counted structure. The
+               Task Control Block (TCB) of each thread holds a reference
+               to each breakaway structure (see include/nuttx/sched.h).
+               It would be more efficent to have one reference counted
+               structure that holds all of the shared resources.
+
+               These are the current shared structures:
+               - Environment varaibles (struct environ_s)
+               - PIC data space and address environments (struct dspace_s)
+               - File descriptors (struct filelist)
+               - FILE streams (struct streamlist)
+               - Sockets (struct socketlist)
+   Status:     Open
+   Priority:   Low.  This is an enhancement.  It would slight reduce
+               memory usage but would also increase coupling.  These
+               resources are nicely modular now.
 
 o Memory Managment (mm/)
   ^^^^^^^^^^^^^^^^^^^^^^
