@@ -47,4 +47,12 @@ config MIPS32_TOOLCHAIN_PINGUINOL
 
 endchoice
 
+config MIPS32_FRAMEPOINTER
+	bool "ABI Uses Frame Pointer"
+	default n
+	depends on ARCH_HAVE_VFORK
+	---help---
+		Register r30 may be a frame pointer in some ABIs.  Or may just be
+		saved register s8.  It makes a difference for vfork handling.
+
 endif
