@@ -39,14 +39,14 @@ HEAD_ASRC = pic32mx-head.S
 
 # Common MIPS files
 
-CMN_ASRCS = up_syscall0.S
+CMN_ASRCS = up_syscall0.S vfork.S
 CMN_CSRCS = up_allocateheap.c up_assert.c up_blocktask.c up_copystate.c \
 			up_createstack.c up_doirq.c up_exit.c up_idle.c up_initialize.c \
 			up_initialstate.c up_interruptcontext.c up_irq.c up_lowputs.c \
 			up_mdelay.c up_modifyreg8.c up_modifyreg16.c up_modifyreg32.c \
 			up_puts.c up_releasepending.c up_releasestack.c up_reprioritizertr.c \
 			up_schedulesigaction.c up_sigdeliver.c up_swint0.c up_udelay.c \
-			up_unblocktask.c up_usestack.c
+			up_unblocktask.c up_usestack.c up_vfork.c
 
 # Configuration dependent common files
 
